--- a/navstyle.css
+++ b/navstyle.css
@@ -1,4 +1,5 @@
 .navbar {
+    width: 100%;
     background-color:#2d2d2d;
     color :white;
     display: flex;
@@ -34,8 +35,13 @@
 
 .redirect:hover {
     border-radius: 1em;
-    padding: 2.5% 5%;    
-    background-color: #444; /* Change the background color on hover */
+    padding: 2.5% 2.5%;    
+    background-color: #444; 
     box-shadow: 0 0 0.25em black ;
-    transition: background-color 0.3s ease; /* Add a smooth transition effect */
+    transition: background-color 0.5s ease;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
