--- a/loginpage/loginstyles.css
+++ b/loginpage/loginstyles.css
@@ -9,9 +9,11 @@
 }
 
 body {
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     min-height: 100vh;
     background: #414040;
