--- a/signuppage/signupstyles.css
+++ b/signuppage/signupstyles.css
@@ -11,7 +11,7 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     min-height: 100vh;
     background: #414040;
