--- a/loginpage/loginstyles.css
+++ b/loginpage/loginstyles.css
@@ -14,26 +14,38 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #414040;
+    background: #000;
 }
 
 .wrapper {
     position: relative;
     width: 400px;
     height: 500px;
-    background: #2d2d2d; 
+    background: #000; 
     box-shadow: 0 0 50px #0ef;
     border-radius: 20px;
     padding: 40px;
     margin-bottom: 5%;
+    overflow: hidden;
 }
-
+.wrapper:hover{
+    animation: animate 1s linear infinite;
+}
+@keyframes animate{
+    100%{
+        filter:hue-rotate(360deg);
+    }
+}
 .form-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
+    transition: 1s ease-in-out;
+}
+.wrapper.active.form-wrapper.sign-in{
+    transform: translateY(-450px);
 }
 
 h2 {
