--- a/signuppage/signupstyles.css
+++ b/signuppage/signupstyles.css
@@ -14,21 +14,28 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #414040;
+    background: #4e4e4e;
 }
 
 .wrapper {
     position: relative;
     width: 400px;
     height: 500px;
-    background: #2d2d2d; 
+    background: #4e4e4e; 
     box-shadow: 0 0 50px #0ef;
     border-radius: 20px;
     padding: 40px;
     margin-bottom: 5%;
 
 }
-
+.wrapper:hover{
+    animation: animate 1s linear infinite;
+}
+@keyframes animate{
+    100%{
+        filter:hue-rotate(360deg);
+    }
+}
 .form-wrapper {
     display: flex;
     justify-content: center;
@@ -36,7 +43,14 @@ body {
     width: 100%;
     height: 100%;
 }
-
+.wrapper.form-wrapper.sign-up{
+    position: absolute;
+    top:450px;
+    left:0;
+}
+.wrapper.active.form-wrapper.sign-up{
+    transform: translateY(-450px);
+}
 h2 {
     font-size: 30px;
     color: #fff;
@@ -58,6 +72,7 @@ h2 {
     color: #fff;
     pointer-events: none;
     transition: .5s;
+
 }
 
 .input-group input {
@@ -69,6 +84,10 @@ h2 {
     background: transparent;
     border: none;
     outline: none;
+}
+.input-group input:focus~label,
+.input-group input:valid~label{
+    top:-5px;
 }
 
 .input-group input:focus~label,
