Video options added.

--- a/loginpage/loginstyles.css
+++ b/loginpage/loginstyles.css
@@ -78,7 +78,7 @@ h2 {
 }
 
 
-.remember {
+/* .remember {
     margin: -5px 0 15px 5px;
 }
 
@@ -89,7 +89,7 @@ h2 {
 
 .remember label input {
     accent-color: #0ef;
-}
+} */
 
 button {
     position: relative;
