--- a/uploadpage/uploadstyles.css
+++ b/uploadpage/uploadstyles.css
@@ -126,3 +126,79 @@ button {
   .queued-images .span--hidden {
     visibility: hidden;
   } 
+
+  .musicselect {
+    display: flex;
+    font-weight: bold;
+    flex-direction: column;
+    gap:20px;
+    padding-bottom: 20px;
+  }
+
+.durationset{
+  display: flex;
+  gap: 20px;
+}
+
+  .durationset label{
+    font-weight: bold;
+    font-size: 1.25em;
+  }
+.durationset  input{
+  color: black;
+}
+
+.transitionoptions {
+  display: flex;
+  gap: 25px;
+}
+
+.transitionoptions select{
+  color: black;
+  width: 60px;
+  text-align: center;
+}
+
+.quality {
+  display: flex;
+  gap:25px;
+}
+
+.quality select{
+  color: black;
+}
+
+.preview{
+  margin-top: 20px;
+  display: flex;
+  gap:25px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.preview .video {
+  width: 1280px;
+  height: 720px;
+  background-color: white;
+}
+
+.preview .buttons{
+  display: flex;
+  gap: 10px;
+}
+
+.preview i{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+
+    background: transparent;
+    border: 2px solid white;
+    border-radius: 50%;
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+}
